Mirror subserf and array modifiers cause arrayed objects to have inverted normals #41890

Closed
opened 2014-09-21 05:01:49 +02:00 by gandalf3 · 7 comments
Member

System Information
Archlinux
GTX 460

Blender Version
Broken: 2.72 testbuild

Short description of error
A mirror, subserf, and array using an object offset (in that order), cause the arrayed geometry to have inverted normals.

Oddly enough, the normals are correct when the subserf is moved below the array, but as far as I can tell that should not matter.

Exact steps for others to reproduce the error

  1. Open mirror_subserf_array.blend
**System Information** Archlinux GTX 460 **Blender Version** Broken: 2.72 testbuild **Short description of error** A mirror, subserf, and array using an object offset (in that order), cause the arrayed geometry to have inverted normals. Oddly enough, the normals are correct when the subserf is moved below the array, but as far as I can tell that should not matter. **Exact steps for others to reproduce the error** 1. Open [mirror_subserf_array.blend](https://archive.blender.org/developer/F111412/mirror_subserf_array.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @gandalf3

Added subscriber: @gandalf3
Author
Member

Hm.. seems the mirror modifier isn't even needed. Why would arraying a subserfed mesh invert the normals?

Hm.. seems the mirror modifier isn't even needed. Why would arraying a subserfed mesh invert the normals?
Bastien Montagne self-assigned this 2014-09-21 10:02:17 +02:00

In fact, you do not even nees the subsurf modifier - vertex normals of copies are not corrected, have no effect in case of mere translation, but when there are rotations, it breaks.

In fact, you do not even nees the subsurf modifier - vertex normals of copies are not corrected, have no effect in case of mere translation, but when there are rotations, it breaks.

This issue was referenced by 398ca952ab

This issue was referenced by 398ca952abe66094f80e52b1bf2f488530279704

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 398ca952ab.

Closed by commit 398ca952ab.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41890
No description provided.