Fix T41890: Regression in new array modifier code, vnors were no more offset-corrected.

This is not needed when we tag normals as dirty, but in simple cases, if offset has some
rotation (or non-uniform scaling) component, vertex normals has to be corrected.